tests/files/type_checker_tests/should_pass/094.cmdr
//Test set operation type checks
a = 1;
x = [3];
x[a] = 3;
