tests/files/type_checker_tests/should_fail/089.cmdr
//Should fail indexing something other than array or tuple
x = 1[1];
